# WEB

./: .gitignore  ast2500.js  index.html  kvm.html  sol.html  vierws  view  white-on-black.css
KETI-Policy/: CMakeList.txt
KETI-Policy/src/: KETI_Policy.cpp  client-test.cpp
Processor-Policy/: CMakeCache.txt  CMakeLists.txt  Makefile  Myapp  cmake_install.cmake  no-note-CMakeLists.txt
Processor-Policy/include/: PolicyManager.hpp  ProcessorPolicy.hpp  no-note-PolicyManager.hpp  no-note-ProcessorPolicy.hpp
Processor-Policy/src/: Policy.cpp  ProcessorPolicy.cpp  main.cpp  no-note-Policy.cpp  no-note-PolicyManager.cpp  no-note-main.cpp  test.cpp
css/: home.css  layout.css
dbus-connect/: bios_restart.json  energy_saving.json  fan.json  feedback.json  policy.json  report.json  server_path
dbus-connect/Energy/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  energy.cpp  energy.hpp  energy.xml  energy_adaptor.h  energy_proxy.h  root@10.0.4.114
dbus-connect/Feedback/: CMakeCache.txt  CMakeLists.txt  KETI-Feedback  Makefile  cmake_install.cmake  feedback  feedback.cpp  feedback.hpp  feedback21
dbus-connect/KETI-IBMC-hj/: CMakeCache.txt  CMakeLists.txt  KETI-IBMC-hj  Makefile  cmake_install.cmake  ibmc.cpp  ibmc.hpp  ibmc.xml  ibmc_adaptor.h  (+1 more)
fan-Policy/: CMakeCache.txt  CMakeLists.txt  KETI-SOL  Makefile  cmake_install.cmake
fan-Policy/include/common/: keti_std.hpp
fan-Policy/include/policy/: KETI_Policy.hpp  Policy.hpp  policy_adaptor.hpp  policy_proxy.hpp
fan-Policy/src/: CMakeLists.txt  KETI_Policy.cpp  Makefile  cmake_install.cmake
fan-Policy/src/policy/: Policy.cpp
images/: time.txt
js/: app.js  export.js
lang/: en_US.json  ko_KR.json
views/: configActiveDirectory.html  configDns.html  configGenerateSsl.html  configLdap.html  configNetwork.html  configNtp.html  configRadius.html  configSmtp.html  configUsers.html  configViewSsl.html  consoleRedirection.html  consoleRedirectionSOL.html  controllers  energySavingCpuPowerCapping.html  energySavingSmartFanControl.html  eventLogs.html  faultAnalysisDiskReport.html  faultAnalysisFoflPolicy.html  faultAnalysisHardwareReport.html  faultAnalysisOverallMonitoring.html  fruInformation.html  home.html  homeMiddle.html  maintenanceAiDataLoad.html  maintenanceBmcReset.html  maintenanceFirmwareUpdate.html  ntpworldmap.html  powerUsage.html  serverPowerControl.html  settingsServices.html  systemInformation.html  virtualMediaUsb.html
(+127 files in other folders)
